Use Java 9 immutable-collection factory methods where possible.
Replacing Collections.immutableList(Arrays.asList()) etc.