@@ -22,31 +22,23 @@ import org.jetbrains.annotations.Nullable;
 /* package */ class ExplorationAutomationConfig {
 	public ExplorationAutomationConfig(final Player player) {
 		this.player = player;
-		conditions = Collections.unmodifiableList(
-			Arrays.asList(new Condition<>("at others' fortresses",
-							fixture -> "a fortress belonging to " + fixture.getOwner(), IFortress.class),
-					new Condition<>("at active towns",
-							fixture -> String.format("a %s active %s", fixture.getTownSize(), fixture.getKind()),
-							AbstractTown.class, t -> TownStatus.Active == t.getStatus()),
-					new Condition<>("at inactive towns",
-							fixture -> String.format("a %s %s %s", fixture.getTownSize(),
-									fixture.getStatus(), fixture.getKind()),
-							AbstractTown.class, t -> TownStatus.Active != t.getStatus()),
-					new Condition<>("at independent villages", "an independent village",
-							Village.class, v -> v.getOwner().isIndependent()),
-					new Condition<>("at other players' villages", "another player's village",
-							Village.class, v -> !v.getOwner().equals(this.player), v -> !v.getOwner().isIndependent()),
+		conditions = List.of(new Condition<>("at others' fortresses",
+						fixture -> "a fortress belonging to " + fixture.getOwner(), IFortress.class), new Condition<>("at active towns",
+						fixture -> String.format("a %s active %s", fixture.getTownSize(), fixture.getKind()),
+						AbstractTown.class, t -> TownStatus.Active == t.getStatus()), new Condition<>("at inactive towns",
+						fixture -> String.format("a %s %s %s", fixture.getTownSize(),
+								fixture.getStatus(), fixture.getKind()),
+						AbstractTown.class, t -> TownStatus.Active != t.getStatus()), new Condition<>("at independent villages", "an independent village",
+						Village.class, v -> v.getOwner().isIndependent()), new Condition<>("at other players' villages", "another player's village",
+						Village.class, v -> !v.getOwner().equals(this.player), v -> !v.getOwner().isIndependent()),
 				// TODO: For "your villages" (and perhaps other towns), include name in stop message
-					new Condition<>("at villages sworn to you", "one of your villages",
-							Village.class, v -> v.getOwner().equals(this.player)),
-					new Condition<>("on meeting other players' units",
-							unit -> "a unit belonging to " + unit.getOwner(), IUnit.class,
-							u -> !u.getOwner().equals(this.player), u -> !u.getOwner().isIndependent()),
-					new Condition<>("on meeting independent units", "an independent unit", IUnit.class,
-							// TODO: Provide helper default methods isIndependent() and sameOwner() in HasOwner?
-							u -> u.getOwner().isIndependent()),
-					new Condition<>("on meeting an immortal", i -> "a(n) " + i.getShortDescription(),
-							Immortal.class)));
+				new Condition<>("at villages sworn to you", "one of your villages",
+						Village.class, v -> v.getOwner().equals(this.player)), new Condition<>("on meeting other players' units",
+						unit -> "a unit belonging to " + unit.getOwner(), IUnit.class,
+						u -> !u.getOwner().equals(this.player), u -> !u.getOwner().isIndependent()), new Condition<>("on meeting independent units", "an independent unit", IUnit.class,
+						// TODO: Provide helper default methods isIndependent() and sameOwner() in HasOwner?
+						u -> u.getOwner().isIndependent()), new Condition<>("on meeting an immortal", i -> "a(n) " + i.getShortDescription(),
+						Immortal.class));
 	}
 
 	private final Player player;
@@ -66,7 +58,7 @@ import org.jetbrains.annotations.Nullable;
 		                 final Predicate<Type>... conditions) {
 			this.configExplanation = configExplanation;
 			this.stopExplanation = ignored -> stopExplanation;
-			this.conditions = Collections.unmodifiableList(Arrays.asList(conditions));
+			this.conditions = List.of(conditions);
 			this.cls = cls;
 		}
 
@@ -80,7 +72,7 @@ import org.jetbrains.annotations.Nullable;
 		                 final Class<Type> cls, final Predicate<Type>... conditions) {
 			this.configExplanation = configExplanation;
 			this.stopExplanation = stopExplanation;
-			this.conditions = Collections.unmodifiableList(Arrays.asList(conditions));
+			this.conditions = List.of(conditions);
 			this.cls = cls;
 		}
 
