@@ -28,17 +28,7 @@ import java.util.Arrays;
 	/**
 	 * Key-codes for arrow keys and the numeric keypad to Strings we will use to represent them.
 	 */
-	private static final List<Pair<Integer, String>> ARROW_INPUTS = Collections.unmodifiableList(
-		Arrays.asList(Pair.with(KeyEvent.VK_UP, "up"), Pair.with(KeyEvent.VK_DOWN, "down"),
-			Pair.with(KeyEvent.VK_RIGHT, "right"), Pair.with(KeyEvent.VK_LEFT, "left"),
-			Pair.with(KeyEvent.VK_KP_DOWN, "down"), Pair.with(KeyEvent.VK_NUMPAD2, "down"),
-			Pair.with(KeyEvent.VK_KP_RIGHT, "right"), Pair.with(KeyEvent.VK_NUMPAD6, "right"),
-			Pair.with(KeyEvent.VK_KP_UP, "up"), Pair.with(KeyEvent.VK_NUMPAD8, "up"),
-			Pair.with(KeyEvent.VK_KP_LEFT, "left"), Pair.with(KeyEvent.VK_NUMPAD4, "left"),
-			Pair.with(KeyEvent.VK_NUMPAD9, "up-right"),
-			Pair.with(KeyEvent.VK_NUMPAD7, "up-left"),
-			Pair.with(KeyEvent.VK_NUMPAD3, "down-right"),
-			Pair.with(KeyEvent.VK_NUMPAD1, "down-left")));
+	private static final List<Pair<Integer, String>> ARROW_INPUTS = List.of(Pair.with(KeyEvent.VK_UP, "up"), Pair.with(KeyEvent.VK_DOWN, "down"), Pair.with(KeyEvent.VK_RIGHT, "right"), Pair.with(KeyEvent.VK_LEFT, "left"), Pair.with(KeyEvent.VK_KP_DOWN, "down"), Pair.with(KeyEvent.VK_NUMPAD2, "down"), Pair.with(KeyEvent.VK_KP_RIGHT, "right"), Pair.with(KeyEvent.VK_NUMPAD6, "right"), Pair.with(KeyEvent.VK_KP_UP, "up"), Pair.with(KeyEvent.VK_NUMPAD8, "up"), Pair.with(KeyEvent.VK_KP_LEFT, "left"), Pair.with(KeyEvent.VK_NUMPAD4, "left"), Pair.with(KeyEvent.VK_NUMPAD9, "up-right"), Pair.with(KeyEvent.VK_NUMPAD7, "up-left"), Pair.with(KeyEvent.VK_NUMPAD3, "down-right"), Pair.with(KeyEvent.VK_NUMPAD1, "down-left"));
 
 	private static Runnable join(final Runnable first, final Runnable second) {
 		return () -> {
@@ -52,33 +42,19 @@ import java.util.Arrays;
 	 * modifier, for "jumping," and the Strings we'll use to represent
 	 * them.
 	 */
-	private static final List<Pair<Integer, String>> JUMP_INPUTS = Collections.unmodifiableList(
-		Arrays.asList(Pair.with(KeyEvent.VK_HOME, "ctrl-home"),
-			Pair.with(KeyEvent.VK_END, "ctrl-end")));
+	private static final List<Pair<Integer, String>> JUMP_INPUTS = List.of(Pair.with(KeyEvent.VK_HOME, "ctrl-home"), Pair.with(KeyEvent.VK_END, "ctrl-end"));
 
 	/**
 	 * Key-codes that are used, when modified with the appropriate
 	 * modifier, for "jumping" only on the Mac platform, and the Strings
 	 * we'll use to represent them.
 	 */
-	private static final List<Pair<Integer, String>> MAC_JUMP_INPUTS = Collections.unmodifiableList(
-		Arrays.asList(Pair.with(KeyEvent.VK_UP, "home"), Pair.with(KeyEvent.VK_KP_UP, "home"),
-			Pair.with(KeyEvent.VK_NUMPAD8, "home"), Pair.with(KeyEvent.VK_DOWN, "end"),
-			Pair.with(KeyEvent.VK_KP_DOWN, "end"), Pair.with(KeyEvent.VK_NUMPAD2, "end"),
-			Pair.with(KeyEvent.VK_LEFT, "caret"), Pair.with(KeyEvent.VK_KP_LEFT, "caret"),
-			Pair.with(KeyEvent.VK_NUMPAD4, "caret"), Pair.with(KeyEvent.VK_RIGHT, "dollar"),
-			Pair.with(KeyEvent.VK_KP_RIGHT, "dollar"),
-			Pair.with(KeyEvent.VK_NUMPAD6, "dollar")));
+	private static final List<Pair<Integer, String>> MAC_JUMP_INPUTS = List.of(Pair.with(KeyEvent.VK_UP, "home"), Pair.with(KeyEvent.VK_KP_UP, "home"), Pair.with(KeyEvent.VK_NUMPAD8, "home"), Pair.with(KeyEvent.VK_DOWN, "end"), Pair.with(KeyEvent.VK_KP_DOWN, "end"), Pair.with(KeyEvent.VK_NUMPAD2, "end"), Pair.with(KeyEvent.VK_LEFT, "caret"), Pair.with(KeyEvent.VK_KP_LEFT, "caret"), Pair.with(KeyEvent.VK_NUMPAD4, "caret"), Pair.with(KeyEvent.VK_RIGHT, "dollar"), Pair.with(KeyEvent.VK_KP_RIGHT, "dollar"), Pair.with(KeyEvent.VK_NUMPAD6, "dollar"));
 
 	/**
 	 * Other key-codes and the Strings we'll use to represent them
 	 */
-	private static final List<Pair<Integer, String>> OTHER_INPUTS = Collections.unmodifiableList(
-		Arrays.asList(Pair.with(KeyEvent.VK_HOME, "home"), Pair.with(KeyEvent.VK_0, "home"),
-			Pair.with(KeyEvent.VK_NUMPAD0, "home"), Pair.with(KeyEvent.VK_END, "end"),
-			Pair.with(KeyEvent.VK_NUMBER_SIGN, "end"), Pair.with(KeyEvent.VK_DOLLAR, "dollar"),
-			Pair.with(KeyEvent.VK_CIRCUMFLEX, "caret"), Pair.with((int) '#', "end"),
-			Pair.with((int) '^', "caret")));
+	private static final List<Pair<Integer, String>> OTHER_INPUTS = List.of(Pair.with(KeyEvent.VK_HOME, "home"), Pair.with(KeyEvent.VK_0, "home"), Pair.with(KeyEvent.VK_NUMPAD0, "home"), Pair.with(KeyEvent.VK_END, "end"), Pair.with(KeyEvent.VK_NUMBER_SIGN, "end"), Pair.with(KeyEvent.VK_DOLLAR, "dollar"), Pair.with(KeyEvent.VK_CIRCUMFLEX, "caret"), Pair.with((int) '#', "end"), Pair.with((int) '^', "caret"));
 
 	protected static void repeatVoid(final Runnable func, final int times) {
 		for (int i = 0; i < times; i++) {
